--- a/styles.css
+++ b/styles.css
@@ -52,3 +52,15 @@ p {
 footer {
   margin: 4em;
 }
+
+@media (max-width: 768px) {
+  html, body {
+    max-width: 90%;
+  }
+}
+
+@media (max-width: 1200px) {
+  html, body {
+    max-width: 60%;
+  }
+}
